--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,25 +6,32 @@ driver:
 platforms:
   - name: archlinux
     image: gwerlas/ansible-guest-archlinux
+    pre_build_mage: true
     volumes: &volumes
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
   - name: debian10
     image: gwerlas/ansible-guest-debian:buster
+    pre_build_mage: true
     volumes: *volumes
   - name: debian11
     image: gwerlas/ansible-guest-debian:bullseye
+    pre_build_mage: true
     volumes: *volumes
   - name: debian12
     image: gwerlas/ansible-guest-debian:bookworm
+    pre_build_mage: true
     volumes: *volumes
   - name: el7
     image: gwerlas/ansible-guest-centos:7
+    pre_build_mage: true
     volumes: *volumes
   - name: el8
     image: gwerlas/ansible-guest-almalinux:8
+    pre_build_mage: true
     volumes: *volumes
   - name: el9
     image: gwerlas/ansible-guest-almalinux:9
+    pre_build_mage: true
     volumes: *volumes
 lint: ansible-lint
 provisioner:
