--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Yoann Colin
-  namespace: yoanncolin
+  namespace: gwerlas
   description: Linux systems management
 
   issue_tracker_url: https://gitlab.com/yoanncolin/ansible/roles/system/-/issues
