--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "*.yml": "ansible",
         ".config/*.yml": "yaml",
         ".gitlab-ci.yml": "yaml",
+        "molecule.yml": "yaml",
     }
 }  
