--- a/molecule/servers/molecule.yml
+++ b/molecule/servers/molecule.yml
@@ -35,22 +35,27 @@ platforms:
     box: almalinux/9
     memory: 2048
     provider_raw_config_args: *raw_config
-  # - name: gentoo
-  #   box: generic/gentoo
-  #   cpus: 4
-  #   memory: 8192
-  #   provider_raw_config_args: *raw_config
-  # - name: ubuntu-18.04
-  #   box: generic/ubuntu1804
-  #   provider_raw_config_args: *raw_config
-  # - name: ubuntu-20.04
-  #   box: generic/ubuntu2004
-  #   memory: 2048
-  #   provider_raw_config_args: *raw_config
-  # - name: ubuntu-22.04
-  #   box: generic/ubuntu2204
-  #   memory: 4096
-  #   provider_raw_config_args: *raw_config
+  - name: gentoo
+    box: generic/gentoo
+    cpus: 4
+    memory: 8192
+    provider_raw_config_args:
+      - "cpu_mode = 'host-passthrough'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "disk_driver :cache => 'writeback'"
+      - "storage :file, bus: 'virtio', cache: 'writeback'"
+  - name: ubuntu-18.04
+    box: generic/ubuntu1804
+    provider_raw_config_args: *raw_config
+  - name: ubuntu-20.04
+    box: generic/ubuntu2004
+    memory: 2048
+    provider_raw_config_args: *raw_config
+  - name: ubuntu-22.04
+    box: generic/ubuntu2204
+    memory: 4096
+    provider_raw_config_args: *raw_config
   # - name: ubuntu-22.10
   #   box: generic/ubuntu2210
   #   memory: 2048
