Improve pkg mgr cache expiration detection

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,8 +5,9 @@ system_hostname: "{{ inventory_hostname }}"
 system_hostname_aliases: []
 system_custom_hosts: []
 
-system_update: false
-system_update_reboot_msg: Reboot initiated by Ansible after a distribution update
+system_package_update: false
+system_package_update_reboot_msg: Reboot initiated by Ansible after a distribution update
+system_package_manager_cache_age: 7
 
 system_profile: server
 
@@ -15,7 +16,7 @@ system_portage_directory: /var/db/repos/gentoo
 
 system_install_zsh: false
 
-system_firewall_managed: "{{ 'container' not in ansible_virtualization_tech_guest }}"
+system_manage_firewall: "{{ 'container' not in ansible_virtualization_tech_guest }}"
 system_firewall_default_zone: public
 
 system_ca_certificates: []
