--- a/molecule/servers/converge.yml
+++ b/molecule/servers/converge.yml
@@ -6,7 +6,7 @@
       ansible.builtin.include_role:
         name: gwerlas.system
       vars:
-        system_update: true
+        system_package_update: true
         system_domainname: mydomain.tld
         system_hostname_aliases:
           - me
