--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -12,16 +12,22 @@
       paths:
         - package-managers
 
-- name: Age of the cache
-  ansible.builtin.find:
-    recurse: "{{ system_update_cache_policy.recurse | default(omit) }}"
-    path: "{{ system_update_cache_policy.path }}"
-    pattern: "{{ system_update_cache_policy.pattern | default(omit) }}"
-    age: "{{ system_update_cache_policy.age | default(omit) }}"
-  register: system_cache_find
+- name: Detection script to determine if the package manager cache need to be updated
+  become: true
+  ansible.builtin.template:
+    src: needs-cache-update.j2
+    dest: /usr/local/bin/needs-cache-update
+    mode: 0755
+
+- name: Determine if the package manager cache need to be updated
+  ansible.builtin.command:
+    cmd: needs-cache-update
+  changed_when: false
+  register: system_package_manager_cache_needs_update
+  failed_when: system_package_manager_cache_needs_update.rc > 1
 
 - name: Packages cache update
-  when: system_cache_find.matched == 0
+  when: system_package_manager_cache_needs_update.rc == 1
   become: true
   ansible.builtin.package:
     sync: "{{ (ansible_pkg_mgr == 'portage') | ternary(true, omit) }}"
@@ -41,17 +47,20 @@
 
 - name: System update
   when:
-    - system_update
-    - system_update_policy is defined
+    - system_package_update
+    - system_package_update_policy is defined
   block:
     - name: Packages update
       become: true
       ansible.builtin.package:
-        name: "{{ system_update_policy.name | default(omit) }}"
-        state: "{{ system_update_policy.state | default(omit) }}"
-        upgrade: "{{ system_update_policy.upgrade | default(omit) }}"
+        name: "{{ system_package_update_policy.name | default(omit) }}"
+        state: "{{ system_package_update_policy.state | default(omit) }}"
+        upgrade: "{{ system_package_update_policy.upgrade | default(omit) }}"
+      register: result
+      until: result.failed == false
+      retries: 3
 
-- name: Packaage managers post operations
+- name: Package managers post operations
   ansible.builtin.include_tasks:
     file: "{{ item }}"
   with_first_found:
