--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,6 +5,16 @@
 - name: OpenRC
   ansible.builtin.import_tasks: openrc.yml
 
+- name: Package manager update marker
+  listen: mark update
+  when: system_pkg_update_cache_policy.marker is defined
+  become: true
+  ansible.builtin.file:
+    path: "{{ system_pkg_update_cache_policy.marker }}"
+    state: touch
+    modification_time: now
+    mode: 0644
+
 - name: Restart systemd-logind or hostname services
   listen:
     - restart hostname
