--- a/tasks/package-managers/pacman-post.yml
+++ b/tasks/package-managers/pacman-post.yml
@@ -12,7 +12,7 @@
       block:
         - name: Install build dependencies
           become: true
-          ansible.builtin.pacman:
+          community.general.pacman:
             name:
               - base-devel
               - git
